# insitu-template

./: .gitignore  README  TAGS
src/mandelbrot/: .#trace.txt  CMakeLists.txt  Makefile  mandelbrot.C  mandelbulbsim.C  patch.C  trace.txt
src/turbChannel/: CMakeLists.txt  SESSION.NAME  SIZE  makefile  makenek  nek5000  nekvisit  trace.txt  turbChannel.f  turbChannel.rea
